--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Путешествие по России</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, intial-scale=0.1">
+        <meta name="viewport" content="width=device-width, initial-scale=0.1">
         <link rel="stylesheet" href="pages/index.css">
     </head>
     <body class="page">
@@ -23,7 +23,7 @@
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <figure class="lead__figure">
-                    <img class="lead__image" src="images/lead__image.png" alt="">
+                    <img class="lead__image" src="images/lead__image.png" alt="девушка на первом этаже в плацкарте, основные пункты путешествия.">
                     <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
                 </figure>
             </section>
@@ -88,7 +88,7 @@
                         <h2 class="place__title">Алтай</h2>
                         <div class="place__website">
                             <p class="place__url-heading">url</p>
-                            <a class="place__link link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+                            <a class="place__link link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
                         </div>
                         <img class="place__image" src="images/place__image(2).png" alt="ноутбук на столе в лесу.">
                         <div>
